--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "pinboard-proxy",
   "version": "1.0.0",
   "description": "Pinboard proxy",
+  "repository": "https://github.com:davidrapson/pinboard-proxy.git",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "David Rapson",
   "license": "ISC",
