Consistent naming of API token

--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
   "website": "https://davidrapson.co.uk/",
   "repository": "https://github.com/davidrapson/pinboard-proxy",
   "env": {
-    "PINBOARD_AUTH_TOKEN": {
+    "PINBOARD_API_TOKEN": {
       "description": "Pinboard API token, you can find yours at https://pinboard.in/settings/password",
       "value": ""
     }
